# LearnPythonTheHardWay

./: .pnp.cjs  README.md  package.json
subprojects/: README.md  package.json  run_yarn_init.sh  ttb_page.html
subprojects/01_A_Good_First_Program/: README.md  ex1.ipynb  package.json  prints.ipynb
subprojects/02_Comments_and_Pound_Characters/: Comments.ipynb  README.md  ex2.ipynb  ex2.py  package.json
subprojects/03_Numbers_and_Math/: README.md  ex3.ipynb  math.py  math_jupyter.ipynb  package.json
subprojects/04_Variables_and_Names/: README.md  ex4.py  package.json
subprojects/05_More_Variables_and_Printing/: README.md  ex5.py  package.json
subprojects/06_Strings_and_Text/: README.md  ex6.py  package.json
subprojects/07_Combining_Strings/: README.md  ex7.py  package.json
subprojects/08_Formatting_Strings_Manually/: README.md  package.json
subprojects/09_Multi_line_Strings/: README.md  ex9.py  package.json
subprojects/10_Escape_Codes_in_Strings/: README.md  ex10.py  package.json
subprojects/11_Asking_People_Questions/: README.md  ex11.py  package.json
subprojects/12_An_Easier_Way_to_Prompt/: README.md  ex12.py  package.json
subprojects/13_Parameters_Unpacking_Variables/: README.md  ex13.py  package.json
subprojects/14_Prompting_and_Passing/: README.md  ex14.py  package.json
subprojects/15_Reading_Files/: README.md  ex15.py  package.json
subprojects/16_Reading_and_Writing_Files/: README.md  ex16.py  package.json  study_drill_#1.py  study_drill_#2.py  study_drill_#3.py  study_drill_#4.py  study_drill_#5.py  test.txt
subprojects/17_More_Files/: README.md  ex17.py  package.json  study_drill_#1.py  study_drill_#2.py  study_drill_#3.py  study_drill_#4.py  study_drill_#5.py
subprojects/18_Names_Variables_Code_Functions/: README.md  ex18.py  package.json  study_drill_#1.py  study_drill_#2.py  study_drill_#3.py  study_drill_#4.py  (+4 more)
subprojects/41_A_Project_Skeleton/testing_cookiecutter/: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  pyproject.toml
subprojects/41_A_Project_Skeleton/testing_cookiecutter/.circleci/: config.yml
subprojects/41_A_Project_Skeleton/testing_cookiecutter/conda.recipe/: meta.yaml
subprojects/41_A_Project_Skeleton/testing_cookiecutter/src/testing_cookiecutter/: __init__.py  __main__.py  cli.py
subprojects/41_A_Project_Skeleton/testing_cookiecutter/tests/: test_cli.py
(+267 files in other folders)
